[package]
name = "sc-consensus-aura"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Aura consensus algorithm for substrate"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-consensus-aura = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-block-builder = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-block-builder = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-client-api = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-consensus = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-consensus = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-consensus-slots = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
thiserror = "1.0"
futures = "0.3.21"
sp-inherents = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
log = "0.4.8"
sp-core = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-blockchain = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-consensus-slots = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-api = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-runtime = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-keystore = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-telemetry = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
async-trait = "0.1.50"

[dev-dependencies]
sp-timestamp = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-keyring = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sp-tracing = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-keystore = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-network = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
sc-network-test = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
substrate-test-runtime-client = { git = "https://github.com/remzrn/substrate", branch = "edgpolkadot-v0.9.19" }
tempfile = "3.1.0"
parking_lot = "0.12.0"
